# lazyllm-rag

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt
data/: part_26.txt
docs/: getting-started.md  index.md  usage.md
src/rag/: check_sqlite.py  rag_retrieve.py  without_rag_retrieve.py
tests/: test_rag.py
